--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - SpeakSmart</title>
+    <title>Dashboard - StutterLess</title>
     <link rel="stylesheet" href="css/dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
 </head>
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-content">
             <div class="nav-left">
-                <h2>🎤 SpeakSmart</h2>
+                <h2>🎤 StutterLess</h2>
             </div>
             <div class="nav-right">
                 <span class="user-name" id="userName">Loading...</span>
